# cmb

./: CMakeLists.txt  README.md  build.py  main.cpp
arrangements/code/: aux_structure.h  common.h  fast_trimesh.cpp  fast_trimesh.h  intersection_classification.cpp  processing.cpp  triangle_soup.cpp  triangle_soup.h  triangulation.cpp  triangulation.h  utils.h
code/: booleans.h  booleans.inl  cmb.cpp  cmb.h  foctree.h  foctree.inl
